--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </ol>
 
         <div class="note">
-            <p>Tham chiếu: <a href="https://www.facebook.com/share/v/1HdFsDiLXQ/" target="_blank">https://www.facebook.com/share/v/1HdFsDiLXQ/</a></p>
+            <p>Tham chiếu: <a href="https://dhr-phucthanh.github.io/Vajrayana-KIM-CUONG-THUA/" target="_blank">https://dhr-phucthanh.github.io/Vajrayana-KIM-CUONG-THUA/</a></p>
             <p>Quý vị có thể tìm lại bài viết mà tôi đã đăng, tôi không khuyến cáo bất kỳ ai thực tập và cũng miễn trừ trách nhiệm. Như tôi đã từng nói, tôi khảo lược các dòng tư tưởng Tôn Giáo Phương Đông để tìm thấy điểm chung của các học thuyết.</p>
             <p>…</p>
             <p>Tham chiếu: <a href="https://www.budsas.org/uni/1-bai/phap021.htm" target="_blank">https://www.budsas.org/uni/1-bai/phap021.htm</a></p>
@@ -280,3 +280,4 @@
 
 </body>
 </html>
+
